* TCP must not lock the endpoint's lock in _TimeWaitTimer() - it will deadlock   with its destructor when the socket is deleted. This effectively stopped all   network timers from working. This will not only fix bug #1693, but also many   other networking problems I've seen so far. * Minor cleanup (mostly line breaks, strange indenting and superfluous   parentheses).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23251 a95241bf-73f2-0310-859d-f6bbb57e9c96